# napari-akseg

./: .gitignore  LICENSE  README.md  akseg_ui.py  cell_image.pickle  environment.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
src/: _utils_statistics.py
src/napari_akseg/: __init__.py  _dock_widget.py  _utils.py  _utils_cellpose.py  _utils_colicoords.py  _utils_database.py  _utils_imagej.py  _utils_iterface_events.py  _utils_json.py  _utils_oufti.py  _utils_refine.py  _utils_segmentation.py  _utils_statistics.py  _utils_upload.py  _version.py  _widget.py  akseg_ui.py  akseg_ui.ui  napari.yaml  napari_ui.py  nim_dev.py  rebuild_usermeta.py  test.tif  testing.txt  uidev.py
src/napari_akseg/_dev/: akseg_dev.py  akseg_dev2.py  autocontast_dev.py  missaligned_paths.pickle  nim_dev.py  rebuild_usermeta.py
src/napari_akseg/_tests/: test_dock_widget.py
