[metadata]
name = napari-akseg
url = https://github.com/piedrro/napari-akseg.git
author = Piers Turner
author_email = piers.turner@physics.ox.ac.uk
license = BSD-3-Clause
description = A simple plugin to use with napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	Framework :: napari
	Topic :: Software Development :: Testing
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Operating System :: OS Independent
	License :: OSI Approved :: BSD License

[options]
packages = find:
python_requires = >=3.8
package_dir = 
	=src
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
	napari
	npe2
	cellpose==1.0
	PyQt5
	PyQt5.sip
	numpy
	numba>=0.43.1
	scipy
	torch
	opencv-python-headless
	natsort
	tqdm
	imagecodecs
	tifffile
	pandas
	mat4py
	glob2
	matplotlib
	scikit-image
	roifile
	openpyxl
	shapely
	colicoords
	scikit-image
	shapely
	psutil

[options.packages.find]
where = src

[options.entry_points]
napari.manifest = 
	napari-akseg = napari_akseg:napari.yaml

[options.package_data]
napari_akseg = napari.yaml

