[metadata]
name = napari-akseg

author = Piers Turner
author_email = piers.turner@physics.ox.ac.uk
url = https://github.com/piedrro/napari-akseg
license = BSD-3-Clause
description = Bacterial segmentation and analysis
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/piedrro/napari-akseg/issues
    Documentation = https://github.com/piedrro/napari-akseg#README.md
    Source Code = https://github.com/piedrro/napari-akseg
    User Support = https://github.com/piedrro/napari-akseg/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    numpy
    qtpy
    cellpose==1.0
    numba>=0.43.1
    scipy
    torch
    opencv-python-headless
    natsort
    tqdm
    imagecodecs
    tifffile
    pandas
    mat4py
    glob2
    matplotlib
    scikit-image
    roifile
    openpyxl
    shapely
    colicoords
    scikit-image
    shapely
    psutil
    xmltodict


[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.packages.find]
where = src

[options.package_data]
* = *.yaml

[options.entry_points]
napari.manifest =
    napari-akseg = napari_akseg:napari.yaml
